--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,7 +33,7 @@ play.i18n.langs = [ "en" ]
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play;MODE=MYSQL;DB_CLOSE_DELAY=-1"
 db.default.username=sa
-db.default.password="sa"
+db.default.password=""
 
 # Evolutions
 # ~~~~~
