--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,7 +31,7 @@ play.i18n.langs = [ "en" ]
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:file:./db/data;MODE=MYSQL;DB_CLOSE_DELAY=-1"
+db.default.url="jdbc:h2:file:./db/data;MODE=MYSQL;INIT=CREATE SCHEMA IF NOT EXISTS \"public\"\\;"
 db.default.username=sa
 db.default.password="sa"
 
@@ -42,3 +42,6 @@ db.default.password="sa"
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+# play-flyway
+play.modules.enabled += "org.flywaydb.play.PlayModule"
