--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./activator run",
+    "dev": "gulp default"
   },
   "repository": {
     "type": "git",
@@ -23,13 +26,19 @@
   },
   "homepage": "https://github.com/SnippetsBucket/snicket#readme",
   "devDependencies": {
+    "babel-core": "^6.4.0",
+    "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.0",
     "browserify": "^12.0.1",
     "browserify-shim": "^3.8.11",
+    "eslint": "^1.10.3",
     "gulp": "^3.9.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-util": "^3.0.7",
+    "pretty-hrtime": "^1.0.1",
     "require-dir": "^0.3.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
