--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp build && ./activator run -jvm-debug 9999",
-    "dev": "gulp default"
+    "start": "gulp default"
   },
   "repository": {
     "type": "git",
