--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "watchify": "^3.6.1"
   },
   "dependencies": {
-    "history": "^1.17.0",
+    "history": "^2.0.0-rc1",
     "material-ui": "^0.14.1",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
-    "react-router": "^1.0.3",
+    "react-router": "2.0.0-rc4",
     "react-tap-event-plugin": "^0.2.1"
   },
   "browserify-shim": {
