--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "browser-sync": "^2.11.0",
     "browserify": "^12.0.1",
     "browserify-shim": "^3.8.11",
+    "css-modulesify": "^0.16.1",
     "eslint": "^1.10.3",
     "gulp": "^3.9.0",
     "gulp-notify": "^2.2.0",
