--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "watchify": "^3.6.1"
   },
   "dependencies": {
+    "axios": "^0.8.1",
     "history": "^1.15.0",
     "material-ui": "^0.14.1",
     "react": "^0.14.3",
