--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "history": "^1.15.0",
     "material-ui": "^0.14.1",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.1",
