--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,6 +34,7 @@ db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:file:./db/data;MVCC=true;INIT=CREATE SCHEMA IF NOT EXISTS \"public\"\\;"
 db.default.username=sa
 db.default.password="sa"
+db.default.migration.auto=true
 
 slick.dbs.default.driver="slick.driver.H2Driver$"
 slick.dbs.default.db.driver=org.h2.Driver
