change application secret key

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "VyqmTkK1upS^l]18stk?NiyaC7QQo[u=[Easz<Z;1:fYu1@7aHxJwG^x=Tm[[7gt"
 
 # The application languages
 # ~~~~~
