--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,9 @@
 ./node_modules/*
 ./public/js/libs/*
 ./public/js/bundle/*
+./public/assets/js/bundle/*
+./public/assets/js/libs/*
+./target/*
+./gulp/*
+./project/*
+./gulpfile.babel.js
