--- a/.eslintrc
+++ b/.eslintrc
@@ -100,7 +100,7 @@
     "func-style": [2, "declaration", { "allowArrowFunctions": true }],
     "id-length": 0,
     "id-match": 0,
-    "indent": [1, 2],
+    "indent": [1, 2, {"SwitchCase": 1}],
     "key-spacing": 0,
     "linebreak-style": [1, "unix"],
     "max-nested-callbacks": [1, 3],
@@ -138,7 +138,7 @@
     "space-infix-ops": 1,
     "space-return-throw-case": 1,
     "space-unary-ops": 1,
-    "spaced-comment": [1, "always"],
+    "spaced-comment": [0, "always"],
     "wrap-regex": 0,
 
     "arrow-parens": [1, "as-needed"],
