--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   },
   "dependencies": {
     "axios": "^0.8.1",
+    "github-markdown-css": "^2.2.1",
     "history": "^1.15.0",
+    "markdown-it": "^5.1.0",
     "material-ui": "^0.14.1",
     "moment": "^2.11.1",
     "react": "^0.14.3",
